Fix wrapping-causing overflows in labels

--- a/front/pi-status-front/src/components/procs/Procs.css
+++ b/front/pi-status-front/src/components/procs/Procs.css
@@ -45,6 +45,10 @@
     text-align: right;
 }
 
+.threads-label, .mem-label, .cpu-label {
+    direction: rtl !important;
+}
+
 .cpu-percs {
     white-space: pre;
 }
